--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
   build:
     docker:
-      - image: circleci/node:stretch
+      - image: circleci/node:10-stretch
 
     branches:
       only:
@@ -15,11 +15,21 @@ jobs:
       - run: git submodule sync
       - run: git submodule update --init
 
+      # Upgrade npm
+#      - run:
+#          name: "Upgrade npm"
+#          command: |
+#            npm install npm@latest
+#            sudo rm -rf /usr/local/lib/node_modules/npm
+#            sudo mv node_modules/npm /usr/local/lib/node_modules/npm
+#            sudo chown -R 500:500 /usr/local/lib/node_modules/npm
+
       # Get npm cache:
       - restore_cache:
           key: npm
 
       # Build steps:
+      - run: sudo npm install -g npm
       - run: npm install
       - run: npm run build
 
